<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="8dp" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="?android:attr/listPreferredItemHeight"
            android:padding="4dp" >

            <LinearLayout
                android:id="@+id/dialog_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:id="@android:id/title"
                    style="@style/dialog_text_title"
                    android:layout_width="0px"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_margin="4dp"
                    android:layout_weight="1"
                    android:ellipsize="marquee"
                    android:marqueeRepeatLimit="marquee_forever"
                    android:singleLine="true"
                    android:text="@string/purchase_header_enable_sync" />
            </LinearLayout>

            <TextView
                android:id="@android:id/text1"
                style="@style/small_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/dialog_title"
                android:layout_margin="4dp"
                android:text="" />

            <TextView
                android:id="@+id/title_benefits"
                style="@style/dialog_text_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@android:id/text1"
                android:layout_margin="4dp"
                android:paddingTop="8dp"
                android:singleLine="true"
                android:text="@string/purchase_header_benefits" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/title_benefits"
                android:orientation="vertical" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <TextView
                        style="@style/small_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:drawableLeft="@drawable/dot_list_item"
                        android:drawableStart="@drawable/dot_list_item" />

                    <TextView
                        style="@style/small_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"
                        android:text="@string/purchase_dialog_benefits1" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <TextView
                        style="@style/small_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:drawableLeft="@drawable/dot_list_item"
                        android:drawableStart="@drawable/dot_list_item" />

                    <TextView
                        style="@style/small_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"
                        android:text="@string/purchase_dialog_benefits2" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <TextView
                        style="@style/small_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:drawableLeft="@drawable/dot_list_item"
                        android:drawableStart="@drawable/dot_list_item" />

                    <TextView
                        style="@style/small_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"
                        android:text="@string/purchase_dialog_benefits3" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <TextView
                        style="@style/small_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:drawableLeft="@drawable/dot_list_item"
                        android:drawableStart="@drawable/dot_list_item" />

                    <TextView
                        style="@style/small_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"
                        android:text="@string/purchase_dialog_benefits4" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <TextView
                        style="@style/small_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:drawableLeft="@drawable/dot_list_item"
                        android:drawableStart="@drawable/dot_list_item" />

                    <TextView
                        style="@style/small_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"
                        android:text="@string/purchase_dialog_benefits5" />
                </LinearLayout>
            </LinearLayout>
        </RelativeLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" > <!-- This is required to stretch the dialog -->

            <LinearLayout
                android:id="@+id/buttonArea"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:gravity="right"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/purchase_button"
                    style="@style/dialog_button_stacked_primary"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:textColor="#ff008810" />

                <TextView
                    android:id="@+id/free_trial_button"
                    style="@style/dialog_button_stacked_secondary"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/purchase_dialog_take_the_free_trial"
                    android:textColor="#f0b014" />

                <TextView
                    android:id="@+id/cancel_button"
                    style="@style/dialog_button_stacked_secondary"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/purchase_dialog_cancel"
                    android:visibility="gone" />
            </LinearLayout>
        </FrameLayout>
    </LinearLayout>

</ScrollView>